--- a/index.html
+++ b/index.html
@@ -114,7 +114,21 @@
 
         fetch(geoURL).then(toJSON).then(getGEO);
       };
+
+      var handleCity = function (event) {
+        event.preventDefault();
+        if (event.target.matches("button")) {
+          var q = event.target.textContent;
+          var geoURL = `http://api.openweathermap.org/geo/1.0/direct?q=${q.value}&appid=${appid}`;
+
+          fetch(geoURL).then(toJSON).then(getGEO);
+        }
+      };
+
       searchEl.addEventListener("click", handleSearch);
+      searchedCities.addEventListener("click", handleCity);
+
+      displayButtons();
     </script>
   </body>
 </html>
