made 5 day forcast

--- a/index.html
+++ b/index.html
@@ -31,21 +31,7 @@
         </div>
         <div class="col-12 col-md-9">
           <div class="card p-4 m-4" id="current"></div>
-          <div class="row">
-            <div class="col-12 col-md">
-              <div class="card p-4 m-4" id="current"></div>
-            </div>
-            <div class="col-12 col-md">
-              <div class="card p-4 m-4" id="current"></div>
-            </div>
-            <div class="col-12 col-md">
-              <div class="card p-4 m-4" id="current"></div>
-            </div>
-            <div class="col-12 col-md">
-              <div class="card p-4 m-4" id="current"></div>
-            </div>
-            <div class="col-12 col-md">
-              <div class="card p-4 m-4" id="current"></div>
+          <div id="fiveDays" class="row">
             </div>
           </div>
         </div>
@@ -63,6 +49,7 @@
 
       var displayWeather = function (data) {
         console.log(data);
+        var fiveDayEl = document.querySelector("#fiveDay");
         var currentEl = document.querySelector("#current");
         var h2El = document.createElement("h2");
         var tempEl = document.createElement("p");
@@ -70,6 +57,29 @@
         tempEl.textContent = "TEMP: " + data.current.temp;
         currentEl.appendChild(h2El);
         currentEl.appendChild(tempEl);
+
+        console.log("DAILY", data.daily.slice(1, 6));
+        var fiveDays = data.daily.slice(1, 6);
+
+        fiveDayEl.innerHTML = null;
+        for (var day of fiveDays) {
+          console.log("DAY", day);
+          var date = new Date(day.dt * 1000).toLocaleDateString();
+          var temp = day.temp.day;
+          var uvi = day.uvi.day;
+          var colEl = document.createElement("div");
+          var cardEl = document.createElement("div");
+          var dateEl = document.createElement("p");
+          var tempEl = document.createElement("p");
+          var uviEl = document.createElement("p");
+          colEl.className = "col-12 col-md";
+          cardEl.className = "card p-3 m-3";
+          fiveDayEl.append(colEl);
+          colEl.append(cardEl);
+          cardEl.append(dateEl);
+          cardEl.append(tempEl);
+          cardEl.append(uviEl);
+        }
       };
 
       var displayButtons = function () {
@@ -119,7 +129,7 @@
         event.preventDefault();
         if (event.target.matches("button")) {
           var q = event.target.textContent;
-          var geoURL = `http://api.openweathermap.org/geo/1.0/direct?q=${q.value}&appid=${appid}`;
+          var geoURL = `http://api.openweathermap.org/geo/1.0/direct?q=${q}&appid=${appid}`;
 
           fetch(geoURL).then(toJSON).then(getGEO);
         }
