--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         return response.json();
       };
 
-      var displayWeather = function (data) {
+      var displayWeather = function (data,city) {
         console.log(data);
         var fiveDayEl = document.querySelector("#fiveDay");
         var currentEl = document.querySelector("#current");
@@ -67,16 +67,29 @@
           var date = new Date(day.dt * 1000).toLocaleDateString();
           var temp = day.temp.day;
           var uvi = day.uvi.day;
+          var icon = day.weather[0].icon;
           var colEl = document.createElement("div");
           var cardEl = document.createElement("div");
           var dateEl = document.createElement("p");
           var tempEl = document.createElement("p");
           var uviEl = document.createElement("p");
+          var imgEl = document.createElement("img");
           colEl.className = "col-12 col-md";
           cardEl.className = "card p-3 m-3";
+
+            dateEl.textContent = date;
+            tempEl.textContent = temp;
+            uviEl.textContent = uvi;
+
+            imgEl.width = 90;
+            imgEl.height = 90;
+            imgEl.alt = icon;
+            imgEl.src = "http://openweathermap.org/img/wn/" + icon + "@2x.png";
+
           fiveDayEl.append(colEl);
           colEl.append(cardEl);
           cardEl.append(dateEl);
+          cardEl.append(imgEl);
           cardEl.append(tempEl);
           cardEl.append(uviEl);
         }
