--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
             <button id="search" type="submit" class="btn btn-primary mb-4">
               Search
             </button>
-            <div id="searchedCities"></div>
+            <div id="searchedCities">
+              
+            </div>
           </form>
         </div>
         <div class="col-12 col-md-9">
-          <div class="card p-4 m-4" id="current"></div>
+          <div class="card p-4 m-4" id="current">
+
+          </div>
           <div id="fiveDays" class="row">
-            </div>
+            
           </div>
         </div>
       </section>
